# adi_fe_iced

./: Cargo.toml  fe_notes.md  notes.md
src/: backend.rs  backend_macros.rs  list.rs  main.rs  sparse_list.rs  ui.rs  widgets.rs
src/backend/: macros.rs  render.rs
src/widgets/: code_line.rs  code_pane.rs  code_view.rs  name_pane.rs  sparse_list.rs
